--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.58.0",
     "@types/node": "^20.11.6",
-    "allure": "^0.0.0"
+    "allure": "^0.0.0",
+    "typescript": "^5.9.3"
   }
 }
