--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "types": ["node", "playwright"]
   },
-  "include": [
-    "tests",
-    "pageobjects",
-    "utils",
-    "playwright.config.ts"
+  "include": ["tests","pageobjects","utils"
   ]
 }
